[gd_scene load_steps=36 format=3 uid="uid://c480l5y03eudi"]

[ext_resource type="Script" uid="uid://biuk7x3v6xrw8" path="res://PÁGINAS/pagina6.gd" id="1_va4n4"]
[ext_resource type="Texture2D" uid="uid://ddqejddvcov05" path="res://IMAGENS/Páginas/6.png" id="2_7ln12"]
[ext_resource type="Texture2D" uid="uid://diiq01fqy6tog" path="res://IMAGENS/Página 6/1.png" id="2_adfpy"]
[ext_resource type="Texture2D" uid="uid://bpsgi7ekpmh3" path="res://IMAGENS/Botões/ligar_som.png" id="3_7ln12"]
[ext_resource type="Texture2D" uid="uid://53pngms2lvdk" path="res://IMAGENS/Página 6/2.png" id="3_sbfgm"]
[ext_resource type="Texture2D" uid="uid://bjdvxsmjk2ip7" path="res://IMAGENS/Página 6/3.png" id="4_p0nby"]
[ext_resource type="Texture2D" uid="uid://dvkdxoe36ju13" path="res://IMAGENS/Botões/desligar_som.png" id="4_qx1s6"]
[ext_resource type="Texture2D" uid="uid://c8ycc8c0jx8sy" path="res://IMAGENS/Página 6/4.png" id="5_ikwv2"]
[ext_resource type="AudioStream" uid="uid://bnl030hx16j2t" path="res://ÁUDIOS/página 6.wav" id="5_qx1s6"]
[ext_resource type="Texture2D" uid="uid://legx5u03ray0" path="res://IMAGENS/Página 6/5.png" id="6_udjjn"]
[ext_resource type="Texture2D" uid="uid://b8h4uvtdmppo" path="res://IMAGENS/Página 6/6.png" id="7_irvrt"]
[ext_resource type="Texture2D" uid="uid://dryrioss3bklk" path="res://IMAGENS/Página 6/7.png" id="8_x66ne"]
[ext_resource type="Texture2D" uid="uid://c31ib2x8eygys" path="res://IMAGENS/Página 6/8.png" id="9_a5swj"]
[ext_resource type="Texture2D" uid="uid://cdcvr5gl1ylsj" path="res://IMAGENS/Página 6/9.png" id="10_w3w6r"]
[ext_resource type="Texture2D" uid="uid://bfh2jh8c8eh30" path="res://IMAGENS/Página 6/10.png" id="11_yyhp7"]
[ext_resource type="Texture2D" uid="uid://cskdv4741iup5" path="res://IMAGENS/Página 6/11.png" id="12_dfjrk"]
[ext_resource type="Texture2D" uid="uid://y4padhty5ik5" path="res://IMAGENS/Página 6/12.png" id="13_2eor3"]
[ext_resource type="Texture2D" uid="uid://smmvqm1ouq06" path="res://IMAGENS/Página 6/13.png" id="14_wamd0"]
[ext_resource type="Texture2D" uid="uid://cnc3n4fff4xfq" path="res://IMAGENS/Página 6/14.png" id="15_bji51"]
[ext_resource type="Texture2D" uid="uid://dy04mtht3u5ng" path="res://IMAGENS/Página 6/15.png" id="16_y4rmq"]
[ext_resource type="Texture2D" uid="uid://bb1cubcy5yist" path="res://IMAGENS/Página 6/16.png" id="17_jssi5"]
[ext_resource type="Texture2D" uid="uid://dim0ay046kksr" path="res://IMAGENS/Página 6/17.png" id="18_2q2n4"]
[ext_resource type="Texture2D" uid="uid://bxdyof0am4rac" path="res://IMAGENS/Página 6/18.png" id="19_cekem"]
[ext_resource type="Texture2D" uid="uid://cftkiglkhhdu1" path="res://IMAGENS/Página 6/19.png" id="20_g5v53"]
[ext_resource type="Texture2D" uid="uid://doekt8apq1w6d" path="res://IMAGENS/Página 6/20.png" id="21_vncdy"]
[ext_resource type="Texture2D" uid="uid://27ic21qqb03b" path="res://IMAGENS/Página 6/21.png" id="22_4dtg4"]
[ext_resource type="Texture2D" uid="uid://crsiucopixkb0" path="res://IMAGENS/Página 6/22.png" id="23_axkj7"]
[ext_resource type="Texture2D" uid="uid://cv84nulxrbrmt" path="res://IMAGENS/Página 6/23.png" id="24_vou07"]
[ext_resource type="Texture2D" uid="uid://tnywh5q60th0" path="res://IMAGENS/Página 6/24.png" id="25_anmt7"]
[ext_resource type="Texture2D" uid="uid://b08kgjvx2a888" path="res://IMAGENS/Página 6/25.png" id="26_muvck"]
[ext_resource type="Texture2D" uid="uid://dsjhji835uydg" path="res://IMAGENS/Página 6/26.png" id="27_3fstq"]
[ext_resource type="Texture2D" uid="uid://cvhr77wr5uols" path="res://IMAGENS/Página 6/27.png" id="28_s5i2p"]
[ext_resource type="Texture2D" uid="uid://drmjmc1osad01" path="res://IMAGENS/Página 6/28.png" id="29_lyalq"]

[sub_resource type="SpriteFrames" id="SpriteFrames_adfpy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_a5swj")
}, {
"duration": 1.0,
"texture": ExtResource("10_w3w6r")
}, {
"duration": 1.0,
"texture": ExtResource("11_yyhp7")
}, {
"duration": 1.0,
"texture": ExtResource("12_dfjrk")
}, {
"duration": 1.0,
"texture": ExtResource("13_2eor3")
}, {
"duration": 1.0,
"texture": ExtResource("14_wamd0")
}, {
"duration": 1.0,
"texture": ExtResource("15_bji51")
}],
"loop": false,
"name": &"loop",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_adfpy")
}, {
"duration": 1.0,
"texture": ExtResource("3_sbfgm")
}, {
"duration": 1.0,
"texture": ExtResource("4_p0nby")
}, {
"duration": 1.0,
"texture": ExtResource("5_ikwv2")
}, {
"duration": 1.0,
"texture": ExtResource("6_udjjn")
}, {
"duration": 1.0,
"texture": ExtResource("7_irvrt")
}, {
"duration": 1.0,
"texture": ExtResource("8_x66ne")
}],
"loop": false,
"name": &"zoom_in",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_sbfgm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("23_axkj7")
}, {
"duration": 1.0,
"texture": ExtResource("24_vou07")
}, {
"duration": 1.0,
"texture": ExtResource("25_anmt7")
}, {
"duration": 1.0,
"texture": ExtResource("26_muvck")
}, {
"duration": 1.0,
"texture": ExtResource("27_3fstq")
}, {
"duration": 1.0,
"texture": ExtResource("28_s5i2p")
}, {
"duration": 1.0,
"texture": ExtResource("29_lyalq")
}],
"loop": false,
"name": &"loop",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("16_y4rmq")
}, {
"duration": 1.0,
"texture": ExtResource("17_jssi5")
}, {
"duration": 1.0,
"texture": ExtResource("18_2q2n4")
}, {
"duration": 1.0,
"texture": ExtResource("19_cekem")
}, {
"duration": 1.0,
"texture": ExtResource("20_g5v53")
}, {
"duration": 1.0,
"texture": ExtResource("21_vncdy")
}, {
"duration": 1.0,
"texture": ExtResource("22_4dtg4")
}],
"loop": false,
"name": &"zoom_in",
"speed": 5.0
}]

[node name="PAG6" type="Node2D"]
position = Vector2(384, 512)
script = ExtResource("1_va4n4")

[node name="FundoPagina" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_7ln12")

[node name="BotaoAnterior" type="TextureButton" parent="."]
offset_left = -340.0
offset_top = 396.0
offset_right = -114.0
offset_bottom = 454.0

[node name="BotaoProxima" type="TextureButton" parent="."]
offset_left = 130.0
offset_top = 397.0
offset_right = 355.0
offset_bottom = 454.0

[node name="BotaoSom" type="TextureButton" parent="."]
offset_left = 111.0
offset_top = -470.0
offset_right = 333.0
offset_bottom = -423.0
toggle_mode = true
button_pressed = true
texture_normal = ExtResource("3_7ln12")
texture_pressed = ExtResource("4_qx1s6")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_qx1s6")
autoplay = true

[node name="ImgUniversidade" type="TextureRect" parent="."]
offset_left = 10.0
offset_top = -50.0
offset_right = 360.0
offset_bottom = 300.0
mouse_filter = 2
texture = ExtResource("2_adfpy")
expand_mode = 1

[node name="PlayerUniversidade" type="AnimatedSprite2D" parent="ImgUniversidade"]
position = Vector2(177, 177)
scale = Vector2(0.3, 0.3)
sprite_frames = SubResource("SpriteFrames_adfpy")
animation = &"zoom_in"
frame = 6
frame_progress = 1.0

[node name="ImgVotacao" type="TextureRect" parent="."]
offset_left = -350.0
offset_top = -50.0
offset_bottom = 300.0
mouse_filter = 2
texture = ExtResource("16_y4rmq")
expand_mode = 1

[node name="PlayerVotacao" type="AnimatedSprite2D" parent="ImgVotacao"]
position = Vector2(173, 176)
scale = Vector2(0.3, 0.3)
sprite_frames = SubResource("SpriteFrames_sbfgm")
animation = &"loop"

[node name="HotspotUniversidade" type="TextureButton" parent="."]
offset_left = 10.0
offset_top = -50.0
offset_right = 360.0
offset_bottom = 300.0

[node name="HotspotVotacao" type="TextureButton" parent="."]
offset_left = -350.0
offset_top = -50.0
offset_bottom = 300.0

[connection signal="pressed" from="BotaoAnterior" to="." method="_on_botao_anterior_pressed"]
[connection signal="pressed" from="BotaoProxima" to="." method="_on_botao_proxima_pressed"]
[connection signal="animation_finished" from="ImgUniversidade/PlayerUniversidade" to="." method="_on_player_universidade_animation_finished"]
[connection signal="animation_finished" from="ImgVotacao/PlayerVotacao" to="." method="_on_player_votacao_animation_finished"]
[connection signal="gui_input" from="HotspotUniversidade" to="." method="_on_hotspot_universidade_gui_input"]
[connection signal="gui_input" from="HotspotVotacao" to="." method="_on_hotspot_votacao_gui_input"]
